[RestfulAPI][Benny] feat: update all structure base on new service and repository and mapper